src/test/deca/context/invalid/declMethod-paramVoid.context
declMethod-paramVoid.deca:2: